--- a/debian/rules
+++ b/debian/rules
@@ -12,7 +12,7 @@ include /usr/share/cdbs/1/class/autotools.mk
 
 #DEB_CONFIGURE_EXTRA_FLAGS = --enable-js-trunk
 DEB_INSTALL_DOCS_ALL =
-DEB_DH_INSTALLINIT_ARGS = --onlyscripts
+DEB_DH_INSTALLINIT_ARGS = -Ncouchdb-bin --onlyscripts
 
 LIB = ${localstatedir}/lib/\$${package_identifier}
 
@@ -21,31 +21,33 @@ binary-arch binary-indep: build
 
 post-patches::
 	sed -i s,$(LIB)$$,$(LIB)/$(DEB_UPSTREAM_VERSION), configure
-	sed -i s,VERSION=%VERSION%$$,VERSION=$(DEB_UPSTREAM_VERSION), debian/postrm
+	sed -i s,VERSION=%VERSION%$$,VERSION=$(DEB_UPSTREAM_VERSION), debian/couchdb.postrm
 
 cleanbuilddir::
 	sed -i s,$(LIB)/$(DEB_UPSTREAM_VERSION)$$,$(LIB), configure
-	sed -i s,VERSION=$(DEB_UPSTREAM_VERSION)$$,VERSION=%VERSION%, debian/postrm
+	sed -i s,VERSION=$(DEB_UPSTREAM_VERSION)$$,VERSION=%VERSION%, debian/couchdb.postrm
 
 common-binary-post-install-arch::
-	rm -r debian/couchdb/var/run
-	rm -f debian/couchdb/usr/share/doc/couchdb/LICENSE.gz
-	rm -f debian/couchdb/usr/share/doc/couchdb/INSTALL.*
-	rm -f debian/couchdb/usr/lib/couchdb/erlang/lib/couch-*/priv/lib/couch_erl_driver.la
-	rm -f debian/couchdb/usr/share/couchdb/www/script/jquery.js
-	rm -f debian/couchdb/usr/share/couchdb/www/script/jquery.form.js
-	chmod a-x debian/couchdb/usr/share/couchdb/server/main.js \
-		debian/couchdb/usr/share/couchdb/server/main-coffee.js
-	sed -i "/dependency_libs/ s/'.*'/''/" `find debian/couchdb -name '*.la'`
+	rm -f debian/couchdb-bin/usr/share/doc/couchdb/LICENSE.gz
+	rm -f debian/couchdb-bin/usr/share/doc/couchdb/INSTALL.*
+	rm -f debian/couchdb-bin/usr/lib/couchdb/erlang/lib/couch-*/priv/lib/couch_erl_driver.la
+	rm -f debian/couchdb-bin/usr/share/couchdb/www/script/jquery.js
+	rm -f debian/couchdb-bin/usr/share/couchdb/www/script/jquery.form.js
+	chmod a-x debian/couchdb-bin/usr/share/couchdb/server/main.js \
+		debian/couchdb-bin/usr/share/couchdb/server/main-coffee.js
+	sed -i "/dependency_libs/ s/'.*'/''/" `find debian/couchdb-bin -name '*.la'`
 	dh_link /usr/share/javascript/jquery/jquery.js /usr/share/couchdb/www/script/jquery.js
 	dh_link /usr/share/javascript/jquery-form/jquery.form.js /usr/share/couchdb/www/script/jquery.form.js
 
 common-binary-predeb-arch::
+	dh_fixperms debian/couchdb-bin/
+	erlang-depends -pcouchdb-bin
+
+common-binary-predeb-indep::
 	dh_fixperms debian/couchdb/
 	chmod 660 debian/couchdb/etc/couchdb/local.ini
 	chmod 750 debian/couchdb/var/lib/couchdb
 	chmod 750 debian/couchdb/var/log/couchdb
-	erlang-depends
 
 # @@ only works from source directory, see #494141
 .PHONY: get-orig-source
